--- a/src/main/webapp/restrict/CadastrarProjeto.xhtml
+++ b/src/main/webapp/restrict/CadastrarProjeto.xhtml
@@ -6,6 +6,10 @@
 	<!--  xmlns:c="http://java.sun.com/jsf/jstl/core"> -->
 
 	<ui:define name="content">
+	
+	<f:metadata>
+		<f:event type="preRenderView" listener="#{loginController.testeSessaoAdm}"/> 
+	</f:metadata>
 
 		<p:fieldset legend="Adicionar Novo projeto">
 			<h:form prependId="false" id="formProjeto">
