--- a/src/main/webapp/restrict/cliente/GerenciaProjeto.xhtml
+++ b/src/main/webapp/restrict/cliente/GerenciaProjeto.xhtml
@@ -13,6 +13,10 @@
 
 
 	<ui:define name="content">
+	
+	<f:metadata>
+		<f:event type="preRenderView" listener="#{loginController.testeSessaoCliente}"/> 
+	</f:metadata>
 		<p:panel id="prjHeader" header="Projeto">
 			<h:outputText id="prjId"
 				value="#{projetoController.projetoSelecionado.nome}" />
