--- a/src/main/webapp/restrict/desenvolvedor/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/ListaProjetos.xhtml
@@ -12,6 +12,9 @@
 
 
 	<ui:define name="content">
+		<f:metadata>
+		<f:event type="preRenderView" listener="#{loginController.testeSessaoDev}"/> 
+	</f:metadata>
 		<p:fieldset legend="Projetos de #{loginController.usuarioLogado.nome}" style="text-align: center;">
 			<h:form id="formRing">
 			
