--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -9,7 +9,7 @@
 	<!--  <h:outputStylesheet name="style.css" />-->
 	<link rel="shortcut icon" href="./images/primescrum.ico" />
 	<link href="./css/login.css" type="text/css" rel="stylesheet"/>
-	<script type="text/javascript" src="./js/script.js"/>
+	
 </h:head>
 <h:body>
 
@@ -45,9 +45,7 @@
 				</f:facet>
 			</p:panelGrid>
 	</h:form>
-			<div id="loader" align="center"> 
-				<img width="40px" height="40px" src="./images/loading.gif"/> 
-			</div>
+			
 			</ui:insert>
 		</p:layoutUnit>
 
@@ -113,5 +111,9 @@
 						</h:form>
 					</p:dialog>
 	</p:layout>
+	<div id="loader" class="loader" align="center"> 
+		<img width="250px" height="250px" src="./images/loading.gif"/> 
+	</div>
+	<script type="text/javascript" src="./js/script.js"/>
 </h:body>
 </html>
