--- a/src/main/webapp/restrict/desenvolvedor/AlterarDesenvolvedor.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/AlterarDesenvolvedor.xhtml
@@ -6,6 +6,9 @@
 	<!--    xmlns:c="http://java.sun.com/jsf/jstl/core" -->
 
 	<ui:define name="content">
+	<f:metadata>
+		<f:event type="preRenderView" listener="#{loginController.testeSessaoDev}"/> 
+	</f:metadata>
 		<p:tabView id="tbv1">
 			<p:tab title="Desenvolvedor">
 				<h:form prependId="false" id="formSM">
