--- a/src/main/webapp/restrict/cliente/ListaProjetos.xhtml
+++ b/src/main/webapp/restrict/cliente/ListaProjetos.xhtml
@@ -36,7 +36,7 @@
 								target="#{projetoController.projetoSelecionado}" />
 						</p:commandButton>
 
-						<p:commandButton action="./GerenciaProjeto.jsf"
+						<p:commandButton action="./DadosProjeto.jsf"
 							image="ui-icon ui-icon-gear">
 							<f:setPropertyActionListener value="#{projeto}"
 								target="#{projetoController.projetoSelecionado}" />
