--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -16,7 +16,7 @@
 	<p:layout fullPage="true">
 
 		<p:layoutUnit position="north" size="75" header="Prime Scrum"
-			resizable="false" closable="false" collapsible="false">
+			resizable="false" closable="false" collapsible="false" style="text-align:center;">
 		</p:layoutUnit>
 
 		<p:layoutUnit position="center">
@@ -37,7 +37,7 @@
 					requiredMessage="Please Enter password!">
 					<f:validateLength minimum="1" />
 				</p:password>
-				<f:facet name="footer">
+				<f:facet name="footer" >
 					<p:commandButton value="Entrar" update="msgs"  actionListener="#{loginController.login}"  type="submit"	icon="ui-icon-check" style="margin:0">
 					</p:commandButton>
 					<p:commandLink value="Cadastrar" oncomplete="PF('dlgNewSm').show();">
