Atualização Desenvolvedor _ Projeto

--- a/src/main/webapp/restrict/Backlog.xhtml
+++ b/src/main/webapp/restrict/Backlog.xhtml
@@ -100,8 +100,7 @@
 							paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 							rowsPerPageTemplate="9,12,15">
 
-							<p:panel header="#{tarefa.nome}" style="text-align:center">
-
+							<p:panel header="#{tarefa.nome}" class="postit" style="text-align:center">
 
 								<h:panelGrid columns="3" style="width:100%">
 
