--- a/src/main/webapp/restrict/TaskBoard.xhtml
+++ b/src/main/webapp/restrict/TaskBoard.xhtml
@@ -29,12 +29,12 @@
 							<p:outputPanel id="dropAreaTodo">
 
 								<p:dataGrid id="todoGrid" var="tarefa"
-									value="#{taskBoardController.tarefasTodo}" columns="3"
+									value="#{taskBoardController.tarefasTodo}" columns="2"
 									style="width:33%">
 
 									<p:column>
 										<p:panel id="pnl" header="#{tarefa.nome}"
-											style="text-align:center">
+											style="text-align:center" class="postitTB">
 											<p:draggable for="pnl" opacity="0.5" revert="true"
 												handle=".ui-panel-titlebar" stack=".ui-panel" scope="doing" />
 										</p:panel>
@@ -51,12 +51,12 @@
 							<p:outputPanel id="dropAreaInprocess">
 
 								<p:dataGrid id="inprocessGrid" var="tarefa"
-									value="#{taskBoardController.tarefasInprocess}" columns="3"
+									value="#{taskBoardController.tarefasInprocess}" columns="2"
 									style="width:33%">
 
 									<p:column>
 										<p:panel id="pnl" header="#{tarefa.nome}"
-											style="text-align:center">
+											style="text-align:center" class="postitTB">
 											<p:draggable for="pnl" revert="true"
 												handle=".ui-panel-titlebar" stack=".ui-panel" scope="done" />
 										</p:panel>
@@ -70,15 +70,15 @@
 
 						<p:fieldset id="doneColumn" legend="Done !">
 
-							<p:outputPanel id="dropAreaDone">
+							<p:outputPanel id="dropAreaDone" >
 
 								<p:dataGrid id="doneGrid" var="tarefa"
-									value="#{taskBoardController.tarefasDone}" columns="3"
+									value="#{taskBoardController.tarefasDone}" columns="2"
 									style="width:33%">
 
 									<p:column>
 										<p:panel id="pnl" header="#{tarefa.nome}"
-											style="text-align:center">
+											style="text-align:center" class="postitTB">
 											<p:draggable for="pnl" revert="true"
 												handle=".ui-panel-titlebar" stack=".ui-panel" scope="todo" />
 										</p:panel>
