--- a/src/main/webapp/restrict/desenvolvedor/Backlog.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/Backlog.xhtml
@@ -35,7 +35,7 @@
 							paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
 							rowsPerPageTemplate="9,12,15">
 
-							<p:panel header="#{tarefa.nome}" style="text-align:center">
+							<p:panel header="#{tarefa.nome}" style="text-align:center" class="postit">
 
 
 								<h:panelGrid columns="1" style="width:100%">
