--- a/src/main/webapp/restrict/desenvolvedor/TaskBoard.xhtml
+++ b/src/main/webapp/restrict/desenvolvedor/TaskBoard.xhtml
@@ -25,19 +25,19 @@
 			</h:form>
 	</p:panel>
 				<h:form id="taskBoardForm">
-					<h:panelGrid columns="3" styleClass="panelGrid" id="gridMain">
+					<h:panelGrid columns="3" styleClass="panelGrid" id="gridMain" >
 						<p:fieldset id="todoColumn" legend="TO DO">
 
 							<p:outputPanel id="dropAreaTodo">
 
 								<p:dataGrid id="todoGrid" var="tarefa"
-									value="#{taskBoardController.tarefasTodo}" columns="3"
+									value="#{taskBoardController.tarefasTodo}" columns="2"
 									style="width:33%">
 
 									<p:column>
 									
 										<p:panel id="pnl" header="#{tarefa.nome}"
-											style="text-align:center">
+											style="text-align:center" class="postitTB">
 											
 											<c:set var="valor" value="#{tarefa.desenvolvedor.id_pessoa}"></c:set>
 											<c:if test="#{loginController.usuarioLogado.id_pessoa != tarefa.desenvolvedor.id_pessoa}">
@@ -60,12 +60,12 @@
 							<p:outputPanel id="dropAreaInprocess">
 
 								<p:dataGrid id="inprocessGrid" var="tarefa"
-									value="#{taskBoardController.tarefasInprocess}" columns="3"
+									value="#{taskBoardController.tarefasInprocess}" columns="2"
 									style="width:33%">
 
 									<p:column>
 										<p:panel id="pnl" header="#{tarefa.nome}"
-											style="text-align:center">
+											style="text-align:center" class="postitTB">
 											<p:draggable for="pnl" revert="true"
 												handle=".ui-panel-titlebar" stack=".ui-panel" scope="done" />
 										</p:panel>
@@ -82,12 +82,12 @@
 							<p:outputPanel id="dropAreaDone">
 
 								<p:dataGrid id="doneGrid" var="tarefa"
-									value="#{taskBoardController.tarefasDone}" columns="3"
+									value="#{taskBoardController.tarefasDone}" columns="2"
 									style="width:33%">
 
 									<p:column>
 										<p:panel id="pnl" header="#{tarefa.nome}"
-											style="text-align:center">
+											style="text-align:center" class="postitTB">
 											<p:draggable for="pnl" revert="true"
 												handle=".ui-panel-titlebar" stack=".ui-panel" scope="todo" />
 										</p:panel>
