--- a/src/main/webapp/restrict/cliente/DadosProjeto.xhtml
+++ b/src/main/webapp/restrict/cliente/DadosProjeto.xhtml
@@ -26,11 +26,11 @@
 				<p:commandLink id="burndown"  	style="margin-right:100px" value="BurnDown Chart" action="./BurnDown.jsf"/>
 			</h:form>
 	</p:panel>
-
+<p:panel  style="text-align: center;">
 <h:form id="formDadosProjeto">
-					<h:panelGrid columns="1" cellpadding="5" style="width:32%;text-align: center;">
+					<h:panelGrid columns="1" cellpadding="5" style="width:100%;text-align: center;">
 						<p:fieldset legend="Cliente" >
-							<h:panelGrid columns="2" style="width:100%; height:50%" cellpadding="5">
+							<h:panelGrid columns="1" style="width:100%; height:50%" cellpadding="5">
 								<p:graphicImage value="/images/personal.png"/>
 								<h:inputHidden></h:inputHidden>
 								<h:outputText value="Nome: #{projetoController.projetoSelecionado.cliente.nome}" />
@@ -46,7 +46,7 @@
 					</p:fieldset>
 					
 						<p:fieldset legend="Gerente do Projeto" >
-							<h:panelGrid columns="2" style="width:100%; height:50%" cellpadding="5">
+							<h:panelGrid columns="1" style="width:100%; height:50%" cellpadding="5">
 								<p:graphicImage value="/images/personal.png"/>
 								<h:inputHidden></h:inputHidden>
 								<h:outputText value="Nome: #{projetoController.projetoSelecionado.scrumMaster.nome}" />
@@ -58,8 +58,8 @@
 						<p:fieldset legend="Desenvolvedores: " >
 
 						<p:carousel value="#{projetoController.projetoSelecionado.listaDesenvolvedores}" var="dev"
-							easing="easeOutBounce">
-							<h:panelGrid  columns="2" style="width:100%; height:50%" cellpadding="5">
+							easing="easeOutBounce" >
+							<h:panelGrid  columns="1" style="width:100%; height:100%" cellpadding="5">
 								<p:graphicImage value="/images/personal.png"/>
 								<h:inputHidden></h:inputHidden>
 								<h:outputText value="Nome: #{dev.nome}" />
@@ -74,5 +74,6 @@
 
 					</h:panelGrid>
 				</h:form>
+			</p:panel>
 	</ui:define>
 </ui:composition>
