Compactação do codigo para download de usuário

--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -19,7 +19,7 @@
 			resizable="false" closable="false" collapsible="false" style="text-align:center;">
 			<p:commandButton value="Login" oncomplete="PF('dlgLogin').show();"/>
 			<p:commandButton value="Cadastrar-se" oncomplete="PF('dlgNewSm').show();"/>
-			<a id="download" href="download/P.rar">Baixe uma cópia do Framework Prime Scrum</a>
+			<a id="download" href="download/Prime_Scrum.rar">Baixe uma cópia do Framework Prime Scrum</a>
 		</p:layoutUnit>
 
 		<p:layoutUnit position="center">
@@ -34,7 +34,7 @@
 				</p:galleria>
 				
 				<p:panel showCaption="true">
-					<h2> O que é o Prime Scrum ?</h2>
+					<h2>O que é o Prime Scrum ?</h2>
 					<p:outputLabel>
 						Prime Scrum é um framework para gerenciamento de projetos desenvolvidos seguindo a metodologia ágil Scrum<br></br><br></br>
 						Conta com Task Board, Burn Down Chart, Planning entre outros componentes do Scrum <br></br><br></br>
