--- a/src/main/webapp/restrict/CadastrarDesenvolvedor.xhtml
+++ b/src/main/webapp/restrict/CadastrarDesenvolvedor.xhtml
@@ -70,7 +70,7 @@
 		
 			<p:tab title="Lista de Desenvolvedores">
 			<h:form id="formDevs">
-				<p:dataTable var="dev" value="#{projetoController.todosDesenvolvedores}">
+				<p:dataTable var="dev" value="#{projetoController.devporSM}">
 								<p:column headerText="Nome">
 									<h:outputText value="#{dev.nome}" />
 								</p:column>
