--- a/src/main/webapp/restrict/Backlog.xhtml
+++ b/src/main/webapp/restrict/Backlog.xhtml
@@ -16,10 +16,10 @@
 	
 	<p:panel id="prjHeader" header="Projeto: #{projetoController.projetoSelecionado.nome}">
 			<h:form id="adm" style="text-align:center;">
-				<p:commandLink id="dadosPrj"  style="margin-right:100px" value="Dados do Projeto" action="./DadosProjeto.jsf"/>
+				<p:commandLink id="dadosPrj"  style="margin-right:100px" value="Dados do Projeto" action="#{loginController.redirectDadosProjeto}"/>
 				<p:outputLabel id="backlog"	style="margin-right:100px;color:blue;font-weight:bold;" value="Backlog" />
-				<p:commandLink id="taskboard"	style="margin-right:100px" value="TaskBoard" action="./TaskBoard.jsf"/>
-				<p:commandLink id="burndown"  style="margin-right:100px" value="BurnDown Chart" action="./BurnDown.jsf"/>
+				<p:commandLink id="taskboard"	style="margin-right:100px" value="TaskBoard" action="#{loginController.redirectTaskBoard}"/>
+				<p:commandLink id="burndown"  	style="margin-right:100px" value="BurnDown Chart" action="#{loginController.redirectBurnDown}"/>
 			</h:form>
 	</p:panel>
 
@@ -46,10 +46,10 @@
 
 							<h:outputLabel value="Desenvolvedor" />
 							<p:selectOneMenu value="#{tarefaController.tarefa.desenvolvedor}"
-								converter="pessoaConverter" label="Desenvolvedor"
+								converter="desenvolvedorConverter" label="Desenvolvedor"
 								style="width:150px;" filter="true">
 								<f:selectItem noSelectionOption="true"  />
-								<f:selectItems value="#{projetoController.todosDesenvolvedores}"
+								<f:selectItems value="#{projetoController.devporSM}"
 									var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.login}" />
 							</p:selectOneMenu>
 
@@ -151,10 +151,10 @@
 									<h:outputLabel value="Desenvolvedor" />
 									<p:selectOneMenu
 										value="#{tarefaController.tarefaSelecionada.desenvolvedor}"
-										converter="pessoaConverter" label="Desenvolvedor">
+										converter="desenvolvedorConverter" label="Desenvolvedor">
 										<f:selectItem  noSelectionOption="true" />
 										<f:selectItems
-											value="#{projetoController.todosDesenvolvedores}"
+											value="#{projetoController.devporSM}"
 											var="pessoa" itemValue="#{pessoa}"
 											itemLabel="#{pessoa.login}" />
 									</p:selectOneMenu>
