--- a/src/main/webapp/restrict/BurnDown.xhtml
+++ b/src/main/webapp/restrict/BurnDown.xhtml
@@ -15,9 +15,9 @@
 	
 	<p:panel id="prjHeader" header="Projeto: #{projetoController.projetoSelecionado.nome}">
 			<h:form id="adm" style="text-align:center;">
-				<p:commandLink id="dadosPrj"  style="margin-right:100px" value="Dados do Projeto" action="./DadosProjeto.jsf"/>
-				<p:commandLink id="backlog"	style="margin-right:100px" value="Backlog" action="./Backlog.jsf" />
-				<p:commandLink id="taskboard"	style="margin-right:100px" value="TaskBoard" action="./TaskBoard.jsf"/>
+				<p:commandLink id="dadosPrj"  style="margin-right:100px" value="Dados do Projeto" action="#{loginController.redirectDadosProjeto}"/>
+				<p:commandLink id="backlog"		style="margin-right:100px" value="Backlog" action="#{loginController.redirectBacklog}" />
+				<p:commandLink id="taskboard"	style="margin-right:100px" value="TaskBoard" action="#{loginController.redirectTaskBoard}"/>
 				<p:outputLabel id="burndown"  style="margin-right:100px;color:blue;font-weight:bold;" value="BurnDown Chart" />
 			</h:form>
 	</p:panel>
