--- a/src/main/webapp/restrict/GerenciaProjeto.xhtml
+++ b/src/main/webapp/restrict/GerenciaProjeto.xhtml
@@ -43,7 +43,7 @@
 							value="#{projetoController.projeto.listaDesenvolvedores}"
 							label="Defina os desenvolvedores" filter="true"
 							filterText="Filter" filterMatchMode="startsWith"
-							panelStyle="width:220px" converter="pessoaConverter">
+							panelStyle="width:220px" converter="desenvolvedorConverter">
 							<f:selectItems value="#{projetoController.todosDesenvolvedores}"
 								var="pessoa" itemValue="#{pessoa}" itemLabel="#{pessoa.login}" />
 						</p:selectCheckboxMenu>
@@ -98,7 +98,7 @@
 
 							<h:outputLabel value="Desenvolvedor" />
 							<p:selectOneMenu value="#{tarefaController.tarefa.desenvolvedor}"
-								converter="pessoaConverter" label="Desenvolvedor"
+								converter="desenvolvedorConverter" label="Desenvolvedor"
 								style="width:150px;" filter="true">
 								<f:selectItem noSelectionOption="true"  />
 								<f:selectItems value="#{projetoController.todosDesenvolvedores}"
@@ -204,7 +204,7 @@
 									<h:outputLabel value="Desenvolvedor" />
 									<p:selectOneMenu
 										value="#{tarefaController.tarefaSelecionada.desenvolvedor}"
-										converter="pessoaConverter" label="Desenvolvedor">
+										converter="desenvolvedorConverter" label="Desenvolvedor">
 										<f:selectItem  noSelectionOption="true" />
 										<f:selectItems
 											value="#{projetoController.todosDesenvolvedores}"
