--- a/src/main/webapp/restrict/TaskBoard.xhtml
+++ b/src/main/webapp/restrict/TaskBoard.xhtml
@@ -15,10 +15,10 @@
 	
 	<p:panel id="prjHeader" header="Projeto: #{projetoController.projetoSelecionado.nome}">
 			<h:form id="adm" style="text-align:center;">
-				<p:commandLink id="dadosPrj" 	style="margin-right:100px" value="Dados do Projeto" action="./DadosProjeto.jsf"/>
-				<p:commandLink id="backlog"		style="margin-right:100px" value="Backlog" action="./Backlog.jsf" />
+				<p:commandLink id="dadosPrj"  	style="margin-right:100px" value="Dados do Projeto" action="#{loginController.redirectDadosProjeto}"/>
+				<p:commandLink id="backlog"		style="margin-right:100px" value="Backlog" action="#{loginController.redirectBacklog}" />
 				<p:outputLabel id="taskboard"	style="margin-right:100px;color:blue;font-weight:bold;" value="TaskBoard" />
-				<p:commandLink id="burndown"  	style="margin-right:100px" value="BurnDown Chart" action="./BurnDown.jsf"/>
+				<p:commandLink id="burndown"  	style="margin-right:100px" value="BurnDown Chart" action="#{loginController.redirectBurnDown}"/>
 			</h:form>
 	</p:panel>
 
