Adição de arquivo para download do codigo. Encerramento do Projeto.

--- a/src/main/webapp/Login.xhtml
+++ b/src/main/webapp/Login.xhtml
@@ -19,7 +19,7 @@
 			resizable="false" closable="false" collapsible="false" style="text-align:center;">
 			<p:commandButton value="Login" oncomplete="PF('dlgLogin').show();"/>
 			<p:commandButton value="Cadastrar-se" oncomplete="PF('dlgNewSm').show();"/>
-			<a id="download" href="download/Prime_Scrum.rar">Baixe uma cópia do Framework Prime Scrum</a>
+			<a id="download" href="download/Prime_Scrum_GPL3.rar">Baixe uma cópia do Framework Prime Scrum</a>
 		</p:layoutUnit>
 
 		<p:layoutUnit position="center">
